# sis-pdf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CORPUS_ANALYSIS_BENIGN_RESULTS.md  CORPUS_ANALYSIS_DEEP_RESULTS.md  CORPUS_ANALYSIS_FINAL_SUMMARY.md  CORPUS_ANALYSIS_RESULTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JS_EXTRACTION_README.md  JS_HARDENING_NEXT_STEPS.md  NEXT_STEPS.md  README-DEV.md  README.md  TODO.md  USAGE.md  clippy.toml  deny.toml  egui-plan.md  next.md  quick_js_test.sh  test_sample.js
crates/font-analysis/: Cargo.toml  README.md  SIGNATURE_GUIDE.md
crates/font-analysis/examples/: analyze_font.rs
crates/font-analysis/signatures/: README.md  cve-2018-9410.yaml  cve-2021-47058.yaml  cve-2021-47180.yaml  cve-2022-3829.yaml  cve-2022-45133.yaml  cve-2022-49215.yaml  cve-2022-49379.yaml  cve-2022-49847.yaml  cve-2022-49901.yaml  cve-2022-50041.yaml  cve-2022-50166.yaml  cve-2022-50331.yaml  cve-2022-50361.yaml  cve-2022-50674.yaml  cve-2022-50676.yaml  cve-2023-25791.yaml  cve-2023-52570.yaml  cve-2023-52838.yaml  cve-2023-53171.yaml  cve-2023-53349.yaml  cve-2023-54034.yaml  cve-2023-6600.yaml  cve-2023-7167.yaml  cve-2024-0632.yaml  cve-2024-1048.yaml  cve-2024-10696.yaml  cve-2024-11617.yaml  cve-2024-12647.yaml  cve-2024-12649.yaml  cve-2024-1332.yaml  cve-2024-13418.yaml  cve-2024-13512.yaml  cve-2024-1723.yaml  cve-2024-1752.yaml  cve-2024-1812.yaml  cve-2024-25081.yaml  cve-2024-25082.yaml  cve-2024-2542.yaml  cve-2024-25450.yaml  (+283 more)
crates/font-analysis/signatures-pending/: README.md  cve-2021-47139.yaml  cve-2021-47400.yaml  cve-2021-47712.yaml  cve-2022-48833.yaml  cve-2022-49529.yaml  cve-2022-49695.yaml  cve-2022-49948.yaml  cve-2022-50118.yaml  cve-2022-50381.yaml  cve-2022-50404.yaml  cve-2022-50511.yaml  cve-2023-32366.yaml  cve-2023-45139.yaml  cve-2023-49275.yaml  cve-2023-53632.yaml  cve-2023-53742.yaml  cve-2023-54116.yaml  cve-2023-54137.yaml  cve-2023-54198.yaml  cve-2024-0794.yaml  cve-2024-10495.yaml  cve-2024-10496.yaml  cve-2024-11200.yaml  cve-2024-11583.yaml  cve-2024-11615.yaml  cve-2024-11891.yaml  cve-2024-12425.yaml  cve-2024-13768.yaml  cve-2024-21482.yaml  cve-2024-24149.yaml  cve-2024-24714.yaml  cve-2024-25117.yaml  cve-2024-25262.yaml  cve-2024-26798.yaml  cve-2024-27194.yaml  cve-2024-29190.yaml  cve-2024-29507.yaml  cve-2024-3198.yaml  cve-2024-32527.yaml  (+300 more)
crates/font-analysis/src/: color_fonts.rs  context.rs  dynamic.rs  lib.rs  model.rs  signatures.rs  static_scan.rs  variable_fonts.rs  woff.rs
crates/font-analysis/tests/: generate_fixtures.py  integration_tests.rs  static_tests.rs
crates/image-analysis/: Cargo.toml
crates/image-analysis/src/: colour_space.rs  dynamic.rs  lib.rs  pixel_buffer.rs  static_analysis.rs  timeout.rs  util.rs
crates/image-analysis/tests/: dynamic_limits.rs  static_findings.rs
crates/js-analysis/: Cargo.toml
crates/js-analysis/examples/: test_hostile.rs  test_static.rs
crates/js-analysis/src/: corpus_regression.rs  dynamic.rs  lib.rs  sandbox_test.rs  static_analysis.rs  types.rs  wasm_features.rs
crates/js-analysis/tests/: adversarial_rewrites.rs  corpus_regression.rs  dynamic_signals.rs  encoded_fixtures.rs  hostile_payloads.rs  profile_contracts.rs  static_signals.rs
crates/sis-pdf/: Cargo.toml
crates/sis-pdf-core/: Cargo.toml
crates/sis-pdf-core/benches/: scan.rs
crates/sis-pdf-core/src/: adversarial.rs  behavior.rs  cache.rs  campaign.rs  canonical.rs  cdr.rs  chain.rs  chain_render.rs  chain_score.rs  chain_synth.rs  config.rs  content_correlation.rs  content_index.rs  correlation.rs  crypto_analysis.rs  detect.rs  diff.rs  embedded_index.rs  entropy.rs  event_graph.rs  event_projection.rs  evidence.rs  explainability.rs  features.rs  features_extended.rs  filter_allowlist.rs  finding_caps.rs  graph_walk.rs  id_shortener.rs  intent.rs  ir_enhanced.rs  ir_export.rs  ir_pipeline.rs  lib.rs  meta_keys.rs  ml.rs  ml_inference.rs  ml_models.rs  model.rs  mutation.rs  (+28 more)
crates/sis-pdf-core/tests/: action_triggers.rs  chain_grouping.rs  chain_noise.rs  common.rs  content_first.rs  corpus_captured_regressions.rs  correlation.rs  crypto.rs  cve_fixtures.rs  decode_recovery.rs  diff.rs  embedded_files.rs  encryption_obfuscation.rs  evasion_fixtures.rs  event_graph_outcomes.rs  feature_extraction.rs  filter_chains.rs  findings_schema.rs  gaps.rs  golden.rs  icc_profile_validation.rs  image_analysis.rs  intent.rs  ml_inference.rs  object_context.rs  objstm.rs  org.rs  parser_diff_hazard_regressions.rs  parser_divergence_content_stream.rs  performance_fixtures.rs  reader_context.rs  regression_payloads.rs  report_schema_compat.rs  review_items.rs  review_items_002.rs  rich_media.rs  runtime_profile.rs  strict.rs  structural_summary.rs  uplift_synthetic_fixtures.rs  (+2 more)
crates/sis-pdf-detectors/: Cargo.toml
crates/sis-pdf-detectors/src/: actions_triggers.rs  advanced_crypto.rs  annotations_advanced.rs  content_first.rs  content_phishing.rs  content_stream_exec_uplift.rs  encryption_obfuscation.rs  entropy_clustering.rs  evasion_env.rs  evasion_time.rs  external_context.rs  external_target.rs  filter_chain_anomaly.rs  filter_depth.rs  font_exploits.rs  font_external_ref.rs  icc_profiles.rs  image_analysis.rs  ir_graph_static.rs  js_polymorphic.rs  js_sandbox.rs  js_signals.rs  lib.rs  linearization.rs  metadata_analysis.rs  multi_stage.rs  object_cycles.rs  objstm_summary.rs  objstm_torture.rs  page_tree_anomalies.rs  parser_divergence.rs  passive_render_pipeline.rs  polyglot.rs  quantum_risk.rs  renderer_divergence.rs  (+12 more)
crates/sis-pdf-gui/: Cargo.toml  Trunk.toml  analysis_worker.js  index.html  wasm-bench.html  wasm-bench.js
crates/sis-pdf-ml-graph/: Cargo.toml
crates/ysnp-cli/: Cargo.toml
crates/ysnp-core/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: carved.rs  content_ops.rs  content_summary.rs  decode_meta.rs  decode_streams.rs  decoder.rs  do_chain_recursion.rs  font.rs  graph.rs  image_metadata.rs  js_static.rs  lexer.rs  objstm.rs  page_tree.rs  parser.rs  strict_parser.rs  swf_header.rs  type3_charproc.rs  xfa.rs
(+617 files in other folders)
