[workspace]
members = [
  "crates/font-analysis",
  "crates/image-analysis",
  "crates/js-analysis",
  "crates/sis-pdf-core",
  "crates/sis-pdf-pdf",
  "crates/sis-pdf-detectors",
  "crates/sis-pdf-ml-graph",
  "crates/sis-pdf",
  "tools/cve-update",
  "tools/perf-guard",
]
exclude = [
  "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
