[workspace]
members = [
  "crates/font-analysis",
  "crates/image-analysis",
  "crates/js-analysis",
  "crates/sis-pdf-core",
  "crates/sis-pdf-pdf",
  "crates/sis-pdf-detectors",
  "crates/sis-pdf-ml-graph",
  "crates/sis-pdf-gui",
  "crates/sis-pdf",
  "tools/cve-update",
  "tools/perf-guard",
]
default-members = [
  "crates/font-analysis",
  "crates/image-analysis",
  "crates/js-analysis",
  "crates/sis-pdf-core",
  "crates/sis-pdf-pdf",
  "crates/sis-pdf-detectors",
  "crates/sis-pdf-ml-graph",
  "crates/sis-pdf",
  "tools/cve-update",
  "tools/perf-guard",
]
exclude = [
  "fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.9"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
