[package]
name = "font-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
skrifa = { version = "0.40", optional = true }
ttf-parser = { version = "0.24", optional = true }
allsorts = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"

[features]
default = []
dynamic = ["skrifa", "ttf-parser", "allsorts"]
