[package]
name = "image-analysis"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sis-pdf-pdf = { path = "../sis-pdf-pdf" }

hayro-jbig2 = { version = "0.1", optional = true }
hayro-jpeg2000 = { version = "0.3", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
png = { version = "0.17", optional = true }
tiff = { version = "0.9", optional = true }

[features]
default = ["jbig2", "jpx", "jpeg", "png", "tiff"]
jbig2 = ["dep:hayro-jbig2"]
jpx = ["dep:hayro-jpeg2000"]
jpeg = ["dep:jpeg-decoder"]
png = ["dep:png"]
tiff = ["dep:tiff"]
