[package]
name = "image-analysis"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
web-time = "1"

hayro-jbig2 = { version = "0.1.0", optional = true }
hayro-jpeg2000 = { version = "0.3.1", optional = true }
jpeg-decoder = { version = "0.3.2", optional = true }
png = { version = "0.18.0", optional = true }
tiff = { version = "0.11.2", optional = true }

[features]
default = ["jbig2", "jpx", "jpeg", "png", "tiff"]
jbig2 = ["dep:hayro-jbig2"]
jpx = ["dep:hayro-jpeg2000"]
jpeg = ["dep:jpeg-decoder"]
png = ["dep:png"]
tiff = ["dep:tiff"]
