[package]
name = "sis-pdf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "2.6"
blake3 = "1.5"
lopdf = "0.32"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sis-pdf-pdf = { path = "../sis-pdf-pdf" }

[dev-dependencies]
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
criterion = "0.5"

[[bench]]
name = "scan"
harness = false
