[package]
name = "sis-pdf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "2.6"
blake3 = "1.5"
lopdf = "0.32"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
image-analysis = { path = "../image-analysis" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
sis-pdf-ml-graph = { path = "../sis-pdf-ml-graph", optional = true }
tracing = "0.1"
flate2 = "1.0"
lzma-rust2 = { version = "0.15.6", default-features = false, features = ["std"] }

[features]
ml-graph = ["sis-pdf-ml-graph"]

[dev-dependencies]
sha2 = "0.10"
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
criterion = "0.5"
tempfile = "3.8"
jsonschema = "0.17.1"

[[bench]]
name = "scan"
harness = false
