[package]
name = "sis-pdf-core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bitflags = "2.6"
blake3 = { workspace = true }
lopdf = "0.39"
rayon = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.9"
image-analysis = { path = "../image-analysis" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
sis-pdf-ml-graph = { path = "../sis-pdf-ml-graph", optional = true }
tracing = { workspace = true }
flate2 = { workspace = true }
lzma-rust2 = { version = "0.15.6", default-features = false, features = ["std"] }

[features]
ml-graph = ["sis-pdf-ml-graph"]

[dev-dependencies]
sha2 = { workspace = true }
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
criterion = "0.5"
tempfile = "3.8"
jsonschema = "0.17.1"

[[bench]]
name = "scan"
harness = false
