[package]
name = "sis-pdf-detectors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
boa_parser = { version = "0.17", optional = true }
boa_ast = { version = "0.17", optional = true }

[features]
js-ast = ["boa_parser", "boa_ast"]
