[package]
name = "sis-pdf-detectors"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
base64 = { workspace = true }
flate2 = { workspace = true }
roxmltree = "0.20.0"
js-analysis = { path = "../js-analysis", default-features = false }
tracing = { workspace = true }
font-analysis = { path = "../font-analysis", default-features = false }
image-analysis = { path = "../image-analysis" }
lzma-rust2 = { version = "0.15.6", default-features = false, features = ["std"] }

[features]
default = ["js-ast", "js-sandbox", "font-dynamic"]
js-ast = ["js-analysis/js-ast"]
js-sandbox = ["js-analysis/js-sandbox"]
font-dynamic = ["font-analysis/dynamic"]
