[package]
name = "sis-pdf-gui"
version.workspace = true
edition = "2021"
rust-version = "1.88"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# UI dependencies (optional for testing without winit)
eframe = { version = "0.33", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui = { version = "0.33", optional = true }
egui_extras = { version = "0.33", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

# Analysis pipeline (no filesystem, no parallelism, no ML)
sis-pdf-core = { path = "../sis-pdf-core", default-features = false }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
image-analysis = { path = "../image-analysis", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sis-pdf-detectors = { path = "../sis-pdf-detectors", default-features = false, features = ["js-ast", "js-sandbox"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element", "HtmlInputElement", "HtmlElement", "Event", "ProgressEvent", "FileReader", "Blob", "Url"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
# Force pure-Rust zlib for WASM (C zlib cannot cross-compile without clang)
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
sis-pdf-detectors = { path = "../sis-pdf-detectors", default-features = false, features = ["js-ast", "js-sandbox", "font-dynamic"] }

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_extras", "image"]

[lib]
crate-type = ["cdylib", "rlib"]
