[package]
name = "sis-pdf-ml-graph"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
prost = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.15"
tracing = "0.1"
tract-onnx = { version = "0.21", default-features = false }

[features]
default = ["ml-ort"]
ml-ort = ["ort/load-dynamic"]
