[package]
name = "sis-pdf-ml-graph"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
prost = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = "0.15"
tracing = { workspace = true }
tract-onnx = { version = "0.21", default-features = false }

[features]
default = ["ml-ort"]
ml-ort = ["ort/load-dynamic"]
