[package]
name = "sis-pdf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
memmap2 = "0.9"
globset = "0.4"
rayon = "1.10"
sha2 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml_edit = "0.22"
tempfile = "3.10"
ureq = "2.10"
flate2 = "1.0"
tar = "0.4"
zip = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
sis-pdf-ml-graph = { path = "../sis-pdf-ml-graph", optional = true }

[features]
ml-graph = ["sis-pdf-core/ml-graph", "sis-pdf-ml-graph"]
font-dynamic = ["sis-pdf-detectors/font-dynamic"]
