[package]
name = "sis-pdf"
version.workspace = true
edition = "2021"

[[bin]]
name = "sis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
hex = "0.4"
globset = "0.4"
rayon = "1.10"
sha2 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
toml_edit = "0.24"
tempfile = "3.10"
ureq = "3.1"
flate2 = "1.0"
tar = "0.4"
zip = "7.2"
tracing = "0.1"
blake3 = "1.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
rustyline = "17.0"
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
sis-pdf-ml-graph = { path = "../sis-pdf-ml-graph", optional = true }
js-analysis = { path = "../js-analysis", default-features = false }
image-analysis = { path = "../image-analysis" }

[features]
ml-graph = ["sis-pdf-core/ml-graph", "sis-pdf-ml-graph"]
font-dynamic = ["sis-pdf-detectors/font-dynamic"]
