[package]
name = "sis-pdf"
version.workspace = true
edition = "2021"

[[bin]]
name = "sis"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "6.0"
hex = { workspace = true }
globset = "0.4"
rayon = "1.10"
sha2 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
toml_edit = "0.24"
tempfile = "3.10"
ureq = "3.1"
flate2 = { workspace = true }
tar = "0.4"
zip = "7.2"
tracing = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
rustyline = "17.0"
sis-pdf-core = { path = "../sis-pdf-core" }
sis-pdf-detectors = { path = "../sis-pdf-detectors" }
sis-pdf-pdf = { path = "../sis-pdf-pdf" }
sis-pdf-ml-graph = { path = "../sis-pdf-ml-graph", optional = true }
js-analysis = { path = "../js-analysis", default-features = false }
image-analysis = { path = "../image-analysis" }

[features]
ml-graph = ["sis-pdf-core/ml-graph", "sis-pdf-ml-graph"]
font-dynamic = ["sis-pdf-detectors/font-dynamic"]
