[package]
name = "ysnp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ysnp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
memmap2 = "0.9"
globset = "0.4"
sha2 = "0.10"
serde_json = "1.0"
walkdir = "2.5"
ysnp-core = { path = "../ysnp-core" }
ysnp-detectors = { path = "../ysnp-detectors" }
ysnp-pdf = { path = "../ysnp-pdf" }
